# RPX

./: .gitignore  CMakeLists.txt  README.md
include/rpx/: Client.h  Globals.h  ICommunication.h  Pipe.h  PipeNode.h  RemoteManager.h  RemoteObject.h  Server.h  TCPClient.h  TCPServer.h  Utils.h
lib/: Readme.txt
sample/: CMakeLists.txt
sample/client/: main.cpp
sample/server/: main.cpp
src/: Client.cpp  Pipe.cpp  Pipe.h  PipeMessageHandler.cpp  PipeMessageHandler.h  PipeNode.cpp  RemoteManager.cpp  RemoteObject.cpp  Server.cpp  TCPClient.cpp  TCPServer.cpp
